<resources>
    <string name="app_name">LexiconCoach</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Названия табов из MainActivity -->
    <string name="vocabularies_tab">Словари</string>
    <string name="statistic_tab">Статистика</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="last_run_format">Последний раз запускался %s</string>
    <string name="last_run_never">Никогда не запускался</string>

    <string name="mistake_caption">Ошибок</string>
    <string name="words_count_caption">Слов</string>
    <string name="attempts_caption">Попыток</string>
    <string name="title_activity_put_vocabulary">Добавление словаря</string>

    <string name="vocabulary_title_hint">(Например, \'Животные\')</string>
    <string name="vocabulary_title_label">Название:</string>
    <string name="vocabulary_description_label">Описание:</string>
    <string name="vocabulary_description_hint">Введите здесь краткое описание вашего словаря (Необязательно)</string>
    <string name="save_menu_item">Сохранить</string>
    <string name="empty_title_error_message">Поле \'Название\' не должно быть пустым!</string>
    <string name="vocabulary_already_exists_error_format">Словарь с названием \'%s\' уже существует!</string>
    <string name="title_activity_words_edit">WordsEditActivity</string>
    <string name="empty_word_fields_error_message">Все поля должны быть заполнены!</string>
    <string name="save_button">Сохранить</string>
    <string name="cancel_button">Отмена</string>
    <string name="edit_translation_dialog_title">Редактирование перевода</string>
    <string name="add_translation_dialog_title">Добавление нового перевода</string>
</resources>
