<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@color/windowBackgroundLight"
    tools:context="com.exprod.lexiconcoach.ui.activities.PutVocabularyActivity"
    tools:showIn="@layout/activity_put_vocabulary">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vocabulary_title_label"
        />
    <EditText
        android:id="@+id/etTitle"
        android:hint="@string/vocabulary_title_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vocabulary_description_label"/>
    <EditText
        android:id="@+id/etDescription"
        android:textSize="7pt"
        android:hint="@string/vocabulary_description_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</LinearLayout>
